--- a/src/scss/components/FilesDragAndDrop.scss
+++ b/src/scss/components/FilesDragAndDrop.scss
@@ -15,12 +15,11 @@
     justify-content: center;
     flex-flow: column nowrap;
     background-color: #e7e7e7;
-    border-radius: 12px;
     color: #7f8e99;
     font-size: 24px;
+    font-family: Tahoma, sans-serif;
     opacity: 1;
     text-align: center;
-    line-height: 1.4;
 
     &.FilesDragAndDrop__placeholder--error {
       background-color: #f7e7e7;
@@ -31,29 +30,5 @@
       background-color: #e7f7e7;
       color: #8ecf99;
     }
-
-    .area__icon {
-      font-size: 64px;
-      margin-top: 20px;
-    }
-  }
-}
-
-.FilesDragAndDrop__area {
-  width: 300px;
-  height: 200px;
-  padding: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column nowrap;
-  font-size: 24px;
-  color: #555555;
-  border: 2px #c3c3c3 dashed;
-  border-radius: 12px;
-
-  .area__icon {
-    font-size: 64px;
-    margin-top: 20px;
   }
 }
