--- a/src/scss/components/FilesDragAndDrop.scss
+++ b/src/scss/components/FilesDragAndDrop.scss
@@ -1,5 +1,7 @@
 .FilesDragAndDrop {
   position: relative;
+  width: 100%;
+  height: 100%;
 
   .FilesDragAndDrop__placeholder {
     position: absolute;
